prost-canonical-serde/tests/ui/flatten_scalar.stderr
error: flatten is only supported on message fields
 --> tests/ui/flatten_scalar.rs:7:5
  |
7 |     #[prost(int32, tag = "1")]
  |     ^
